@@ -18,3 +18,4 @@ README
 t/00-have-compiler.t
 t/01-basic.t
 t/02-link.t
+t/03-cplusplus.t
