@@ -37,3 +37,4 @@ Plugin
 doc_check.pl$
 ^[^/]+\.patch$
 ^devtools
+^cover_db
