@@ -2,6 +2,9 @@ Revision history for Perl extension ExtUtils::CBuilder.
 
 0.26_04 - 
 
+ Enhancements:
+ - Added 'have_cplusplus()' method to check for C++ support
+
 0.2603 - Sat Jul 18 06:56:06 EDT 2009
 
  Bugs fixed:
